# dsasd

./: .gitignore  CMakeLists.txt  DialogoPrevisualizacion.h  calculadora.cpp  calculadora.h  inventario.h  mainwindow.cpp  mainwindow.h  mainwindow_ui.py  resources.qrc  stylesheet.qss.txt
include/: reloj.h
plantillas/: tema_amarillo.json  tema_amarillo_claro.json  tema_azul.json  tema_naranja.json  tema_naranja_claro.json
src/: DialogoPrevisualizacion.cpp  inventario.cpp  mainwindow.cpp  reloj.cpp
styles/: calculadora.qss  stylesheet.qss
styles/plantillas/: tema_amarillo_dorado.json  tema_citrico.json  tema_indigo.json  tema_lila.json  tema_oscuro.json  tema_rojo.json  tema_rosa.json  tema_rosa_claro.json  tema_teal.json  tema_verde.json  tema_verde_claro.json
ui/: mainwindow.ui
